# multimedia-gst-plugin-aml-asink

./: Config.in  VERSION  configure.ac  gst-plugin-aml-asink.mk  version_config.sh
src/: Makefile.am  ac4_frame_parse.c  ac4_frame_parse.h  aml_version.h  aml_version.h.in  gstamlclock.c  gstamlclock.h  gstamlhalasink_new.c  gstamlhalasink_new.h  gstmetapesheader.h  gstparam_time_pair.c  gstparam_time_pair.h  mediasync_wrap.c  mediasync_wrap.h  param_time_pair_test.c  pes_private_data.c  pes_private_data.h  scaletempo.c  scaletempo.h
